fixed blurred images and responsive styles

--- a/grid.css
+++ b/grid.css
@@ -7,13 +7,13 @@
 
 .concertPic {
   grid-area: picture;
+  width: 100%;
 }
 
 .info {
   grid-area: info;
   margin: 0 auto;
   align-self: center;
-
 }
 
 .textBlock {
@@ -36,65 +36,61 @@
 
 .bar {
   grid-area: form;
+  float: right;
   justify-self: center;
 }
 
 @media only screen and (min-width: 320px) and (max-width: 480px) {
+
+  .container {
+    margin:0 5px;
+    margin-top: 40%;
+
+  }
   .eachResult {
     width: 90%;
     display: grid;
-    grid-template-columns: auto;
+    grid-template-columns: 100%;
     grid-template-rows: auto;
     grid-template-areas:
       "picture"
       "text"
       "button"
-}
+  }
 
-.appendNav {
-  grid-template-colums:auto;
-  grid-template-rows: auto;
-  grid-template-areas:
+  .info {
+    grid-area: auto;
+  }
+  .concertPic {
+    margin: 0 auto;
+    width: 60%;
+    float: none;
+    left: auto;
+  }
+  .picContainer {
+    background-color: #212121;
+    width: 100%;
+    border-bottom: 4px solid #070707;
+  }
+  .appendNav {
+    text-align: center;
+    padding: 10px 40px 50px 40px;
+    grid-template-columns:100%;
+    grid-template-rows: auto auto;
+    grid-template-areas:
     "title"
     "form"
+  }
+  .navh1 {
+    font-size: 22px;
+    margin-bottom: 3px;
+    grid-area: title;
 
-}
+  }
 
-.tickets, .getAudioButton {
-  width: 130px;
-}
-.concertPic {
-  justify-self: center;
-  margin-top: 5px;
-}
-.textBlock {
-  text-align: center;
-}
-.audioPlayer {
-  text-align: center;
-}
-.navh1 {
-  font-size: 18px;
+  .bar {
+    grid-area: form;
+    float: none;
+  }
 
-
-}
-.search-text {
-  width: 180px;
-}
-.nav-search-text {
-  width: 77%;
-}
-.search-button {
-  width: 20%;
-}
-.appendNav {
-  text-align: center;
-  float: none;
-  padding: 10px 40px 50px 40px;
-}
-.container {
-  margin:0 5px;
-  margin-top: 40%;
-
-}
 }
